--- a/styles/base.sass
+++ b/styles/base.sass
@@ -129,7 +129,7 @@ header
         size: 16px
         weight: bold
       color: #ffffff
-      @include gradient($btn-gradient-color-one, $btn-gradient-color-two)
+      @include gradient-vertical($btn-gradient-color-one, $btn-gradient-color-two)
       @include border-radius(25)
 
 
@@ -145,14 +145,10 @@ header
   width: 960px
   padding-bottom: 55px
 
+
   .tab-area
+  	@include gradient-horizontal(#ffffff, #d6d6d6)
     @include border-radius($tab-border-radius)
-    background-color: #ffffff
-    background: -webkit-linear-gradient(left, #ffffff,#ffffff, #d6d6d6)
-    background: -o-linear-gradient(left, #ffffff, #ffffff, #d6d6d6)
-    background: -moz-linear-gradient(left, #ffffff, #ffffff, #d6d6d6)
-    background: linear-gradient(left, #ffffff, #ffffff, #d6d6d6)
-    background: -ms-linear-gradient(left,  #ffffff, #d6d6d6)
 
 
     .tabs
